--- a/vibp/game.html
+++ b/vibp/game.html
@@ -42,15 +42,36 @@
 
 
         var GuaGame = function () {
-            var g = {}
+            var g = {
+                actions: {},
+                keydowns: {},
+            }
             var canvas = document.querySelector('#id-canvas')
             var context = canvas.getContext('2d')
             g.canvas = canvas
             g.context = context
             //events
+            window.addEventListener('keydown', function (event) {
+                g.keydowns[event.key] = true
+            })
+            window.addEventListener('keyup', function (event) {
+                g.keydowns[event.key] = false
+            })
+            //
+            g.registerAction = function (key, callback) {
+                g.actions[key] = callback
+            }
 
             //timer
             setInterval(function () {
+                //events
+                var actions = Object.keys(g.actions)
+                for (let index = 0; index < actions.length; index++) {
+                    var key = actions[index]
+                    if (g.keydowns[key]) {
+                        g.actions[key]()
+                    }
+                }
                 g.update()
                 // clear
                 context.clearRect(0, 0, canvas.width, canvas.height)
@@ -65,46 +86,19 @@
 
             var paddle = Paddle()
 
-
-            var leftDown = false
-            var rightDown = false
-            //events
-            window.addEventListener('keydown', function (event) {
-                log('keydown')
-                var k = event.key
-                if (k == 'a') {
-                    leftDown = true
-                } else if (k == 'd') {
-                    rightDown = true
-                }
+            game.registerAction('a', function () {
+                paddle.moveLeft()
             })
-
-            window.addEventListener('keyup', function (event) {
-                log('keyup')
-                var k = event.key
-                if (k == 'a') {
-                    leftDown = false
-                } else if (k == 'd') {
-                    rightDown = false
-                }
+            game.registerAction('d', function () {
+                paddle.moveRight()
             })
 
             game.update = function () {
-                // update x and y
-                if (leftDown) {
-                    paddle.moveLeft()
-                } else if (rightDown) {
-                    paddle.moveRight()
-                }
+
             }
             game.draw = function() {
                 game.context.drawImage(paddle.image,  paddle.x,  paddle.y)
             }
-            setInterval(function () {
-                
-                
-            }, 1000 / 30)
-
         }
 
         __main()
